[package]
name = "rust-async-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
]